Fix examples layout on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -583,4 +583,22 @@ body {
     margin-bottom: 20px;
     display: inline-block;
   }
+  
+  .example-carousel {
+    flex-direction: column;
+    gap: 15px;
+  }
+  
+  .example-text {
+    width: 100%;
+    flex: none;
+  }
+  
+  .example-next {
+    align-self: flex-end;
+  }
+  
+  .example-attribution {
+    margin-top: 0;
+  }
 }
